<resources>
    <string name="app_name">LocalVPN</string>
    <string name="start_vpn">Start VPN</string>
    <string name="start_vpn_description">Start AdBlock VPN</string>
    <string name="stop_vpn">Stop VPN</string>
    <string name="stop_vpn_description">Stop AdBlock VPN</string>
    <string name="manage_list">Block List</string>
    <string name="manage_blocklist">Manage Block List</string>
    <string name="vpn_active">VPN IS ACTIVE</string>
    <string name="vpn_off">VPN IS OFF</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="follow_me">Follow Me</string>
    <string name="language_toggle">AR</string>
    <string name="open_app">Open App</string>
    <string name="settings">Settings</string>
</resources>